--- a/Login/style.css
+++ b/Login/style.css
@@ -12,8 +12,11 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background: url(/Photos/business.jpg);
+    background: url(Photos/business.jpg);
     padding: 30px;
+    
+  
+    
 }
 
 .container {
@@ -44,7 +47,7 @@ body {
     position: absolute;
     height: 100%;
     width: 100%;
-     background: #1d1d1e;
+     background: #75757c;
     opacity: 0.5;
     z-index: 100;
 }
@@ -54,8 +57,8 @@ body {
     position: absolute;
     height: 100%;
     width: 100%;
-     background: #1d1d1e;
-    opacity: 0.5;
+
+
     z-index: 100;
     transform: rotateY(180deg);
 }
