--- a/Portfolio/styles.css
+++ b/Portfolio/styles.css
@@ -13,7 +13,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(/images/Frame\ 1.png);
+    background-image: url(images/Frame\ 1.png);
     background-size: cover;
     background-position: center;
 }
