--- a/Portfolio/styles.css
+++ b/Portfolio/styles.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    background: #3b044d;
+    background: #2b0339;
     color: white;
 }
 
@@ -27,6 +27,7 @@ nav{
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+   
 }
 
 .logo{
@@ -382,3 +383,71 @@ form .btn2{
     margin-top: 20px;
 }
 
+nav .fas{
+    display: none;
+}
+/* -------------------css for small screens -------------- */
+
+@media only screen and (max-width: 600px){
+    #header{
+        background-image: url(/images/bg2.png);
+    }
+
+    .header-text{
+        margin-top: 100%;
+        font-size: 16px;
+    }
+
+    .header-text h1{
+        font-size: 30px;
+    }
+
+    nav .fas{
+        display: block;
+        font-size: 25px;
+    }
+
+    nav ul{
+        background: #945da7;
+        position: fixed;
+        top: 0;
+        right: -200px;
+        width: 200px;
+        height: 100vh;
+        padding-top: 50px;
+        z-index: 2;
+        transition: 0.7s ease;
+    }
+
+    nav ul li{
+        display: block;
+        margin: 25px;
+    }
+
+    nav ul .fas{
+        position: absolute;
+        top: 25px;
+        left: 25px;
+        cursor: pointer;
+    }
+
+    .about-header{
+        font-size: 36px;
+    }
+
+    .about-col-1, .about-col-2{
+        flex-basis: 100%;
+    }
+
+    .about-col-2 h1{
+        margin-top: 30px;
+    }
+
+    .title-link{
+        font-size: 18px;
+    }
+
+    .contact-left , .contact-right{
+        flex-basis: 100%;
+    }
+}
