--- a/Portfolio/styles.css
+++ b/Portfolio/styles.css
@@ -390,7 +390,7 @@ nav .fas{
 
 @media only screen and (max-width: 600px){
     #header{
-        background-image: url(/images/bg2.png);
+        background-image: url(images/bg2.png);
     }
 
     .header-text{
