--- a/Portfolio/styles.css
+++ b/Portfolio/styles.css
@@ -446,6 +446,7 @@ nav .fas{
 
     .title-link{
         font-size: 18px;
+        margin-right: 15px;
     }
 
     .contact-left , .contact-right{
