--- a/Portfolio/styles.css
+++ b/Portfolio/styles.css
@@ -453,4 +453,11 @@ nav .fas{
     .contact-left , .contact-right{
         flex-basis: 100%;
     }
+   
 }
+
+#msg{
+    color: #810CA8;
+    margin-top: -30px;
+    display: block;
+} 
