--- a/Portfolio/styles.css
+++ b/Portfolio/styles.css
@@ -28,8 +28,7 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    flex-wrap: wrap;
-   
+    flex-wrap: wrap;   
 }
 
 .logo{
@@ -83,8 +82,7 @@ nav ul li a:hover::after{
 /* About section css */
 
 #about{
-    color: #810CA8;
-   
+    color: #810CA8; 
     width: 100%;
     min-height: 80vh;
 
@@ -181,10 +179,7 @@ nav ul li a:hover::after{
 }
 
 /* ----------------Services css------------------------ */
-#services{
-    
-    
-}
+
 
 .services-list{
     display: grid;
@@ -240,17 +235,14 @@ nav ul li a:hover::after{
 
 #portfolio{
     padding: 50px 0;
-   
-    width: 100% ;
-    height: 100vh;
+
 }
 #portfolio .container{
     margin-bottom: -30px;
 }
 #portfolio .portfolio-img{
     background: url(../images/pic5.jpg);
-    background-size: cover;
-   
+    background-size: cover;   
     background-repeat: no-repeat;
     background-attachment: fixed;
     width: 100%;
@@ -330,7 +322,7 @@ transform: scale(1.1);
 
 .btn{
     display: block;
-    margin: 30px auto;
+    margin: 20px auto;
     width: fit-content;
     border: 1px solid #810CA8;
     padding: 14px 50px;
@@ -349,7 +341,7 @@ transform: scale(1.1);
 
 /* ----------------Contact page------------ */
 #contact{
-    padding-top: 70px;
+    
 }
 .contact-left{
     flex-basis: 35%;
@@ -472,6 +464,9 @@ nav .fas{
     #about{
         background-size: cover;
     }
+    #about .about-img{
+        height: 130vh;
+    }
     .about-header{
         font-size: 36px;
     }
@@ -493,6 +488,12 @@ nav .fas{
     .contact-left , .contact-right{
         flex-basis: 100%;
     }
+
+    #portfolio .portfolio-img{
+        height: 230vh;
+    }
+
+    
    
 }
 
