--- a/Portfolio/styles.css
+++ b/Portfolio/styles.css
@@ -72,14 +72,33 @@ nav ul li a:hover::after{
 
 .header-text h1{
     margin-top: 10px;
-    font-size: 30px;
+    font-size: 40px;
 }
 
-.text-line{
-    font-size: 20px;
+.sec-text::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #4886c0;
+    border-left: 2px solid #9cd11f;
+    animation: textAnime 4s steps(12);
+    animation-iteration-count: infinite;
 }
 
-.header-text .text-effect{
+@keyframes textAnime {
+    40%, 60% {
+        left: calc(100% + 2px);
+    }
+    
+    0% {
+        left: 0;
+    }
+}
+
+/* .header-text .text-effect{
     font-family: 'poppins', sans-serif;
     font-size: 100px;
     color: transparent;
@@ -88,7 +107,7 @@ nav ul li a:hover::after{
     -webkit-background-clip: text;
     background-position: 0 0;
     animation: back 20s linear infinite;
-}
+} */
 
 @keyframes back {
     100%{
@@ -452,9 +471,7 @@ nav .fas{
         font-size: 16px;
     }
 
-    .header-text .text-effect{
-        font-size: 60px;
-    }
+
 
     nav .fas{
         display: block;
