--- a/Portfolio/styles.css
+++ b/Portfolio/styles.css
@@ -72,54 +72,23 @@ nav ul li a:hover::after{
 
 .header-text h1{
     margin-top: 10px;
-    font-size: 40px;
+    font-size: 50px;
 }
 
-.sec-text::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #4886c0;
-    border-left: 2px solid #9cd11f;
-    animation: textAnime 4s steps(12);
-    animation-iteration-count: infinite;
-}
 
-@keyframes textAnime {
-    40%, 60% {
-        left: calc(100% + 2px);
-    }
-    
-    0% {
-        left: 0;
-    }
-}
-
-/* .header-text .text-effect{
-    font-family: 'poppins', sans-serif;
-    font-size: 100px;
-    color: transparent;
-    -webkit-text-stroke: 1px white;
-    background: url(images/back.png);
-    -webkit-background-clip: text;
-    background-position: 0 0;
-    animation: back 20s linear infinite;
-} */
-
-@keyframes back {
-    100%{
-        background-position: 2000px 0;
-    }
-}
 
 .header-text h1 span{
     color: #810CA8;
 }
 
+.header-text .name-text{
+    color: white;
+}
 
+.header-text .auto-type{
+    color: #cb4ca7;
+    font-size: 40px;
+}
 /* About section css */
 
 #about{
